--- a/code/pages/index.html
+++ b/code/pages/index.html
@@ -11,6 +11,7 @@
       <li><a href="/custome-elements.html">自定义元素</a></li>
       <li><a href="/template-slot.html">template-slot</a></li>
       <li><a href="/carousel.html">carouse-轮播</a></li>
+      <li><a href="/poly-search.html">poly-search-3D组件</a></li>
     </ul>
   </nav>
   <script src="../js/index.js"></script>
