添加biz-card案例，还有问题为解决

--- a/code/pages/index.html
+++ b/code/pages/index.html
@@ -13,6 +13,7 @@
       <li><a href="/carousel.html">carouse-轮播</a></li>
       <li><a href="/poly-search.html">poly-search-3D组件</a></li>
       <li><a href="/web-harp.html">webharp-app组件</a></li>
+      <li><a href="/biz-card.html">biz-card组件</a></li>
     </ul>
   </nav>
   <script src="../js/index.js"></script>
